# orion

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/generate/: platform.h.in  shaderpresets.h.in
docs/: CMakeLists.txt  Doxyfile.in  dir_092e10b9c2a506fc3010c7eb96dabc37.html  dir_092e10b9c2a506fc3010c7eb96dabc37.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_74e2c4e92e1e3178a45793ebdd3d6410.html  dir_74e2c4e92e1e3178a45793ebdd3d6410.js  dir_94a36784afa54c0b50996002372b429e.html  dir_94a36784afa54c0b50996002372b429e.js  dir_ce9a472ef352da2db80651ec5b342d5d.html  dir_ce9a472ef352da2db80651ec5b342d5d.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_ef3b2545113449f8f25e623a543d64e3.html  doxygen-awesome.css  files.html  files_dup.js  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html
docs/d1/d09/: orionwin_8h.html  orionwin_8h.js  orionwin_8h_source.html
docs/d2/d4d/: group__vertexspec.html  group__vertexspec.js
docs/d2/df3/: group__window.html  group__window.js
docs/d4/d83/: group__shaders.html  group__shaders.js
docs/d4/db2/: group__buffers.html  group__buffers.js
docs/d5/dd5/: oriongl_8h.html  oriongl_8h.js  oriongl_8h_source.html
docs/d6/db2/: group__meta.html  group__meta.js
docs/d7/d58/: shaderpresets.html  shaderpresets.js
docs/d7/db5/: group__textures.html  group__textures.js
docs/d8/d01/: basicshaders.html
docs/d9/df7/: group__orionglad.html  group__orionglad.js
docs/dc/d7a/: orionglad_8h.html  orionglad_8h.js  orionglad_8h_source.html
docs/dd/da0/: todo.html
docs/pages/: mainpage.dox  modules.dox  shaderpresets.dox
docs/search/: all_0.js  all_3.js  all_4.js  all_5.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  pages_0.js  pages_2.js  searchdata.js  typedefs_0.js
docs/style/: header.html
examples/: CMakeLists.txt  debug.c  glfwcompat.c
include/: oriongl.h  orionwin.h
src/: CMakeLists.txt  buffer.c  buffers.c  callback.c  init.c  internal.h  internalwin.h  shaders.c  textures.c  window.c
src/internal/: internal.c  internal.h
src/lib/: init.c  init.h
src/presets/: CMakeLists.txt  basic.frag.glsl  basic.vert.glsl  lighting.frag.glsl  lighting.vert.glsl
tests/: CMakeLists.txt  glfwcompat.c  interface.c  lighting.c  lighting.cc  public.c
tests/testkit/: oriontk.h
